...
    <string name="app_name">Nevermind</string>
    <string name="package_name">name.leesah.nirvana</string>
    <string name="website_url">https://nevermindapp.leesah.name</string>

    <!-- MainActivity navigation-->
    <string name="navigation_settings">Settings</string>
    <string name="navigation_medications">Medicines</string>
    <string name="navigation_reminders">Today</string>

    <string name="no_reminders_for_today">No intake for today.</string>
    <string name="no_medication">Start by adding a medicine.</string>

    <!-- MedicationActivity titles -->
    <string name="add_medication">New medicine</string>
    <string name="edit_medication">%s</string>

    <!-- Buttons -->
    <string name="save">Save</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>

    <!-- Errors -->
    <string name="err_dosage_already_added">Dosage already added for that time.</string>

    <!-- Treatment -->
...
    <string name="pref_title_treatment_recurring_until_date">Last day</string>
    <string name="pref_summary_treatment_recurring_until_date">Treatment recurs until the date (exclusively)</string>
    <string name="pref_title_treatment_recurring">Treatment cycle recurring</string>

    <!-- Medication -->
    <string name="medication_repeating_everyday">Everyday</string>
    <string name="medication_repeating_every_n_days">Every n days</string>
    <string name="medication_repeating_days_of_week">Days of week</string>
    <string name="medication_reminding_certain_hours">At certain hours</string>
    <string name="medication_reminding_every_n_hours">Every n hours</string>
    <string name="medication_reminding_n_times_a_day">N times a day</string>
    <string name="medication_starting_switch_text_on" />
    <string name="medication_starting_switch_text_off" />
    <string name="medication_starting_relative_immediately">Do not delay</string>
    <string name="medication_starting_relative_by_period">Delay for certain period</string>
...
    <string name="to_string_starting_immediately">Do not delay</string>
    <string name="to_string_stopping_after_period">Stop in %s</string>

    <!-- Medication preference titles & summaries-->
    <!--   * Basics -->
    <string name="prefcat_title_medication_basics">Information</string>
    <string name="pref_title_medication_name">Name</string>
    <string name="pref_summary_medication_name">Displayed in notifications</string>
    <string name="pref_title_medication_manufacturer">Manufacturer</string>
    <string name="pref_summary_medication_manufacturer">(optional)</string>
    <string name="pref_title_dosage_form">Dosage form</string>
    <string name="pref_summary_dosage_form">The form of the medicine doses</string>
    <string name="prefcat_title_medication_strategies">Intakes</string>
    <string name="prefcat_summary_medication_strategies">The intake patterns</string>
    <!--   * Reminding -->
    <string name="pref_title_medication_reminding">Hours of day</string>
    <string name="pref_summary_medication_reminding">On which hours of day is the medicine taken</string>
    <string name="prefcat_title_medication_reminding">Reminding model</string>
    <!--   * Repeating -->
    <string name="pref_title_medication_repeating">Days</string>
    <string name="prefcat_title_medication_repeating">Repeating model</string>
    <string name="pref_title_medication_repeating_every_n_days">Interval (in days)</string>
    <!--   * Starting -->
    <string name="pref_title_medication_starting">Starting</string>
    <!--   * Stopping -->
    <string name="pref_title_medication_stopping">Stopping</string>

    <string name="prefcat_title_details">Details</string>

    <!-- Notification -->
    <string name="notification_channel_id_reminder">name.leesah.nirvana:notification_channel:REMINDER</string>
    <string name="notification_channel_name_reminder">Medication reminders</string>
...
    <string name="err_medication_repeating_empty">Repeating strategy cannot be empty</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="stopping_until_cycle_ends">Until treatment cycle ends</string>
    <string name="stopping_never">Never</string>
    <string name="to_string_recurring_until_date">Recurs until %s</string>
    <string name="refresh">Refresh</string>
    <string name="add_an_intake">Add an intake.</string>
    <plurals name="to_string_timed_dosage">
        <item quantity="one">%1$d unit at %2$s</item>
        <item quantity="other">%1$d units at %2$s</item>
    </plurals>
    <plurals name="to_string_every_n_hours_every_n_hours">
...
